--- a/index_en.html
+++ b/index_en.html
@@ -23,17 +23,17 @@
                 <a href="index.html"><img src="images/sprog_ikoner/icon_da.png" alt="Sprog ikon for DA" class="sprog1"></a>
                 <a href="index_de.html"><img src="images/sprog_ikoner/icon_de.png" alt="Sprog ikon for DE" class="sprog2"></a>
             </div>
-            <nav class="grid-nav">
+            <nav class="grid-nav" style="position: absolute; left: 0; right: 0;">
                 <a href="menu_en.html">Menu</a>
                 <a href="opskrifter_en.html">Recipes</a>
-                <a href="index_en.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_en.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_en.html">About us</a>
                 <a href="kontakt_en.html">Contact</a>
             </nav>
         </header>
         <div class="arrow_height">
             <div class="forsidebillede">
-                <img src="images/norsminde_fiskehus_forside.jpg" alt="Billede af forsiden, Norsminde Fiskehus">
+                <img src="images/nf_cinema_forside.gif" alt="Cinemagraph af forsiden, Norsminde Fiskehus">
             </div>
 
             <div class="arrow bounce">
