--- a/kontakt_de.html
+++ b/kontakt_de.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu_de.html">Menü</a>
                 <a href="opskrifter_de.html">Rezepte</a>
-                <a href="index_de.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_de.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_de.html">Über uns</a>
                 <a href="kontakt_de.html" class="active">Kontakt</a>
             </nav>
@@ -42,8 +42,8 @@
                     <p>Telefon: 2555 5203</p>
                     <br>
                     <p>Mail: Norsmindefiskehus@gmail.com</p>
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos5">
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos6">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos5">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos6">
                 </div>
                 <div class="kontaktform findos_flexcolumn">
                     <h3>Sie können uns außerhalb der Saison hier kontaktieren</h3>
