--- a/kontakt_en.html
+++ b/kontakt_en.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu_en.html">Menu</a>
                 <a href="opskrifter_en.html">Recipes</a>
-                <a href="index_en.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_en.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_en.html">About us</a>
                 <a href="kontakt_en.html" class="active">Contact</a>
             </nav>
@@ -42,8 +42,8 @@
                     <p>Phone: 2555 5203</p>
                     <br>
                     <p>Mail: Norsmindefiskehus@gmail.com</p>
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos5">
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos6">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos5">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos6">
                 </div>
                 <div class="kontaktform findos_flexcolumn">
                     <h3>You can contact us here outside of the season</h3>
