--- a/menu_de.html
+++ b/menu_de.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu_de.html" class="active">Menü</a>
                 <a href="opskrifter_de.html">Rezepte</a>
-                <a href="index_de.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_de.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_de.html">Über uns</a>
                 <a href="kontakt_de.html">Kontakt</a>
             </nav>
@@ -345,8 +345,8 @@
                         <li>16,-</li>
                     </ul>
                 </div>
-                <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos1">
-                <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos2">
+                <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos1">
+                <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos2">
             </div>
 
         </aside>
