--- a/om_os.html
+++ b/om_os.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu.html">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os.html" class="active">Om os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
@@ -81,8 +81,8 @@
                     <p>Fiskehuset skal være et sted, hvor man kan komme og nyde livet på havnen og slappe af med en lækker tallerken mad og en øl eller et glas vin. Der skal være plads til børn og voksne, man skal kunne få en hurtig fiskefrikadelle med hjem eller nyde en treretters menu. Maden vil være både klassisk og moderne, dansk og international. Der skal være noget for alle."</p>
 
                     <span>- Signe Graham</span>
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos3">
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos4">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos3">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos4">
                 </div>
             </div>
         </aside>
