--- a/om_os_de.html
+++ b/om_os_de.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu_de.html">Menü</a>
                 <a href="opskrifter_de.html">Rezepte</a>
-                <a href="index_de.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_de.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_de.html" class="active">Über uns</a>
                 <a href="kontakt_de.html">Kontakt</a>
             </nav>
@@ -81,8 +81,8 @@
                     <p>Das Fischerhaus muss ein Ort sein, an dem Sie das Leben am Hafen genießen und sich bei einem köstlichen Teller mit Essen und einem Bier oder einem Glas Wein entspannen können. Es muss Platz für Kinder und Erwachsene geben, man sollte in der Lage sein, einen schnellen Fisch zu Hause zu fangen oder ein Drei-Gänge-Menü zu genießen. Das Essen wird sowohl klassisch als auch modern, dänisch und international sein. Da muss für jeden etwas dabei sein."</p>
 
                     <span>- Signe Graham</span>
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos3">
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos4">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos3">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos4">
                 </div>
             </div>
         </aside>
