--- a/om_os_en.html
+++ b/om_os_en.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu_en.html">Menu</a>
                 <a href="opskrifter_en.html">Recipes</a>
-                <a href="index_en.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_en.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_en.html" class="active">About us</a>
                 <a href="kontakt_en.html">Contact</a>
             </nav>
@@ -81,8 +81,8 @@
                     <p>The fisherman's house must be a place to come and enjoy life at the harbor and relax with a delicious plate of food and a beer or glass of wine. There must be room for children and adults, one should be able to get a quick fish cake to take home or enjoy a three course menu. The food will be both classic and modern, Danish and international. There must be something for everyone. "</p>
 
                     <span>- Signe Graham</span>
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos3">
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos4">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos3">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos4">
                 </div>
             </div>
         </aside>
