--- a/opskrifter_de.html
+++ b/opskrifter_de.html
@@ -27,7 +27,7 @@
             <nav class="grid-nav">
                 <a href="menu_de.html">Menü</a>
                 <a href="opskrifter_de.html" class="active">Rezepte</a>
-                <a href="index_de.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_de.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_de.html">Über uns</a>
                 <a href="kontakt_de.html">Kontakt</a>
             </nav>
