--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu.html">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os.html">Om os</a>
                 <a href="kontakt.html" class="active">Kontakt</a>
             </nav>
@@ -42,8 +42,8 @@
                     <p>Telefon: 2555 5203</p>
                     <br>
                     <p>Mail: Norsmindefiskehus@gmail.com</p>
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos5">
-                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos6">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos5">
+                    <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos6">
                 </div>
                 <div class="kontaktform findos_flexcolumn">
                     <h3>Du kan kontakte os her uden for sæsonen</h3>
