--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu.html" class="active">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os.html">Om os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
@@ -345,8 +345,8 @@
                         <li>16,-</li>
                     </ul>
                 </div>
-                <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos1">
-                <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos2">
+                <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos1">
+                <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos2">
             </div>
 
         </aside>
