--- a/menu_en.html
+++ b/menu_en.html
@@ -26,7 +26,7 @@
             <nav class="grid-nav">
                 <a href="menu_en.html" class="active">Menu</a>
                 <a href="opskrifter_en.html">Recipes</a>
-                <a href="index_en.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_en.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_en.html">About us</a>
                 <a href="kontakt_en.html">Contact</a>
             </nav>
@@ -343,8 +343,8 @@
                         <li>16,-</li>
                     </ul>
                 </div>
-                <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos1">
-                <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos2">
+                <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos1">
+                <img src="images/fisk_animation.gif" alt="Pynte fisk" class="pyntefisk_pos2">
             </div>
 
         </aside>
