--- a/opskrifter.html
+++ b/opskrifter.html
@@ -27,7 +27,7 @@
             <nav class="grid-nav">
                 <a href="menu.html">Menu</a>
                 <a href="opskrifter.html" class="active">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os.html">Om os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
