--- a/opskrifter_en.html
+++ b/opskrifter_en.html
@@ -27,7 +27,7 @@
             <nav class="grid-nav">
                 <a href="menu_en.html">Menu</a>
                 <a href="opskrifter_en.html" class="active">Recipes</a>
-                <a href="index_en.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index_en.html" class="nohover"><img src="images/nf_animation_logo.gif" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os_en.html">About us</a>
                 <a href="kontakt_en.html">Contact</a>
             </nav>
